# perfmod

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
src/perfmod/: C_fitted.py  fit_curve_voxels.py  fit_curves.py  myfun.py
src/perfmod/aif/: find_delay.py  parker.py
src/perfmod/models/: __init__.py  annet.py  gctt.py  sourbron.py  tofts.py
tests/: test_osipi.py  test_osipi_curve_fit.py  test_osipi_least_squares.py  test_perfmod.py
