[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "importlib"
]
build-backend = "setuptools.build_meta"

[project]
name = "perfmod"
version = "0.0.1"
license = {text = "MIT License"}
authors = [
    {name = "Erling Andersen", email = "Erling.Andersen@Helse-Bergen.NO"}
]
maintainers = [
    {name = "Erling Andersen", email = "Erling.Andersen@Helse-Bergen.NO"}
]
description = "Perfusion modelling"
readme = "README.md"
requires-python = ">=3.11,<3.15"
keywords = [
    "python",
    "medical",
    "imaging",
    "perfusion"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]
dependencies = [
    "setuptools",
    "imagedata>=3.8.14,<4",
    "numpy",
    "scipy>=1.16.0"
]

[project.urls]
Documentation = "https://imagedata.readthedocs.io"
SourceCode = "https://github.com/erling6232/perfmod"
Changelog = "https://github.com/erling6232/perfmod/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}
